# Formula-One-Race-Simulator

./: CMakeLists.txt  Circuit.cpp  Circuit.h  Driver.cpp  Driver.h  Participant.cpp  Participant.h  README.md  Race.cpp  Race.h  Team.cpp  Team.h  main.cpp  testing.cpp
Data/: circuits.csv  drivers.csv  teams.csv
